# IPyM

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  IPSolver.cpp  IPSolver_8cpp.html  LICENSE  Makefile  README.md  README_8md.html  annotated.html  classSparseSolver-members.html  classSparseSolver.html  classes.html  cmake_install.cmake  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  ipy__selfdual_8cpp.html  ipy_selfdual.cpp  md_README.html  pages.html  structResiduals-members.html  structResiduals.html
.github/workflows/: build.yml  docs.yml
docs/: CNAME  Doxyfile
docs/html/: README_8md.html  classSparseSolver-members.html  classSparseSolver.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  ipy__selfdual_8cpp.html  md__2data_2IPyM_2README.html  pages.html  structResiduals-members.html  structResiduals.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_c.js
docs/latex/: README_8md.tex  annotated.tex  classSparseSolver.tex  files.tex  ipy__selfdual_8cpp.tex  md__2data_2IPyM_2README.tex  refman.tex  structResiduals.tex
include/: AMD.h  IPSolver.h  SparseMatrix.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  defines_1.js  files_0.js  functions_0.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  variables_2.js  variables_a.js  variables_b.js
